# grpc-whisper-client

./: README.md  pyproject.toml
src/: logger.py
src/client/: app.py  cli.py  schemas.py
